Analytics.gov snippet added to head

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
+    <!-- We participate in the US government's analytics program. See the data at analytics.usa.gov. --> 
+    <script async type="text/javascript" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=AGENCY" id="_fed_an_ua_tag"></script>
+
     <link itemprop="url" rel="import" href="/src/code-nasa-app.html">
 
     <style>
