moved testing files and old data files to /data/deprecated; added 'Pending Release' license to code-nasa-projects.html

--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -230,10 +230,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         licenses: {
           type: Object,
           value: {
-           "NASA Open Source": {
-            "License Long Name": "NASA Open Source 3.0",
-            "License Link": "http://opensource.org/licenses/NASA-1.3"
-           },
            "ALv2": {
             "License Long Name": "Apache License 2.0",
             "License Link": "https://www.apache.org/licenses/LICENSE-2.0"
@@ -270,6 +266,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             "License Long Name": "Common Development and Distribution License",
             "License Link": "http://en.wikipedia.org/wiki/Common_Development_and_Distribution_License"
            },
+           "CMUCS": {
+            "License Long Name": "Carnegie Mellon University Software Licensing",
+            "License Link": "http://www.cs.cmu.edu/~helpext/software_licensing/index.html"
+           },
            "COTS": {
             "License Long Name": "Commercial off-the-shelf",
             "License Link": "http://en.wikipedia.org/wiki/Commercial_off-the-shelf"
@@ -280,10 +280,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
            },
            "GPR": {
             "License Long Name": "Government Purpose Rights",
-            "License Link": "http://www.acq.osd.mil/dpap/dars/dfars/html/current/227_71.htm"
-           },
-           "UGPR": {
-            "License Long Name": "Unlimited Government Purpose Rights",
             "License Link": "http://www.acq.osd.mil/dpap/dars/dfars/html/current/227_71.htm"
            },
            "GPLv3": {
@@ -298,9 +294,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             "License Long Name": "GNU General Public License (GPL) version 2",
             "License Link": "http://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
            },
+           "HTK": {
+            "License Long Name": "University of Cambridge HTK License",
+            "License Link": "http://llvm.org/releases/2.8/LICENSE.TXT"
+           },
            "LGPL": {
             "License Long Name": "GNU Library or 'Lesser' General Public License (LGPL)",
             "License Link": "http://www.gnu.org/licenses/lgpl.html"
+           },
+           "LLVM": {
+            "License Long Name": "LLVM Release License",
+            "License Link": "http://llvm.org/releases/2.8/LICENSE.TXT"
            },
            "MIT": {
             "License Long Name": "MIT License",
@@ -310,6 +314,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             "License Long Name": "Mozilla Public License 2.0",
             "License Link": "http://www.mozilla.org/MPL/2.0/"
            },
+           "NASA Open Source": {
+            "License Long Name": "NASA Open Source 3.0",
+            "License Link": "http://opensource.org/licenses/NASA-1.3"
+           },
            "NCSA": {
             "License Long Name": "NCSA/University of Illinois Open Source License",
             "License Link": "http://directory.fsf.org/wiki/License:IllinoisNCSA"
@@ -318,29 +326,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             "License Long Name": "Non-Commercial Software License Agreement (CU14012)",
             "License Link": "https://secure.nouvant.com/columbia/technology/cu14012/license/258"
            },
+           "Pending Release": {
+            "License Long Name": "Pending Release",
+            "License Link": "http://opensource.org/licenses/NASA-1.3"
+           },
            "Public Domain": {
             "License Long Name": "Public Domain",
             "License Link": "http://directory.fsf.org/wiki/License:PublicDomain"
-           },
-           "SUN": {
-            "License Long Name": "Sun Public License",
-            "License Link": "http://en.wikipedia.org/wiki/Sun_Public_License"
            },
            "SPL": {
             "License Long Name": "Sun Public License",
             "License Link": "http://en.wikipedia.org/wiki/Sun_Public_License"
            },
-           "CMUCS": {
-            "License Long Name": "Carnegie Mellon University Software Licensing",
-            "License Link": "http://www.cs.cmu.edu/~helpext/software_licensing/index.html"
+           "SUN": {
+            "License Long Name": "Sun Public License",
+            "License Link": "http://en.wikipedia.org/wiki/Sun_Public_License"
            },
-           "LLVM": {
-            "License Long Name": "LLVM Release License",
-            "License Link": "http://llvm.org/releases/2.8/LICENSE.TXT"
-           },
-           "HTK": {
-            "License Long Name": "University of Cambridge HTK License",
-            "License Link": "http://llvm.org/releases/2.8/LICENSE.TXT"
+           "UGPR": {
+            "License Long Name": "Unlimited Government Purpose Rights",
+            "License Link": "http://www.acq.osd.mil/dpap/dars/dfars/html/current/227_71.htm"
            }
           }
         }
