Changed title to AR User Interface Prototype
Changed title to AR User Interface Prototype

--- a/AR/index.html
+++ b/AR/index.html
@@ -20,7 +20,7 @@
             <a href = "https://nasa.gov"><img src="favicon-192.png" alt="NASA logo but image did not load" style= "max-width: 100%;"></a>
         </div>
         <div class = "title">
-            <a href = "https://code.nasa.gov">NASA OCIO AR Demo</a>
+            <a href = "https://code.nasa.gov">AR User Interface Prototype</a>
         </div>
         <button class = "submenuButton" onclick = "new function(){buttonToggle();}"> ... </button>
         <!-- Div that appears when you click the menu button. Change the cluster being visualized-->
