--- a/AR/index.html
+++ b/AR/index.html
@@ -54,7 +54,7 @@
             <strong>Count:</strong>
             <p id = "Count">???</p> 
             <strong>Projects:</strong>
-            <p id = "Projects">???</p> 
+            <p id = "Projects"></p> 
             <button id = "buttonSlider" onclick='resumeAR()'>Select Another Data Cluster</button>
         </div>
     </footer>
