also added link to tag name

--- a/AR/index.html
+++ b/AR/index.html
@@ -50,7 +50,7 @@
         <!-- Div that displays when a Cluster is selected-->
         <div id = "footerDiv">
             <strong>Tag Name:</strong>
-            <p id = "Tag Name">???</p> 
+            <p id = "TagName"></p> 
             <strong>Count:</strong>
             <p id = "Count">???</p> 
             <strong>Projects:</strong>
