Fixed small bugs

--- a/AR/index.html
+++ b/AR/index.html
@@ -38,7 +38,7 @@
             <a-marker preset="hiro" id = "aScene">
             </a-marker>
             <a-entity camera>
-                <a-entity cursor 
+                <a-entity cursor="fuse: false;" 
                 raycaster="objects: .clickable" ><img src="crosshair.png" class="mobileCH"></a-entity>
             </a-entity>
         </a-scene>
