add flash tutorial to AR

--- a/AR/index.html
+++ b/AR/index.html
@@ -34,6 +34,7 @@
         </div>
     </header>
     <main>
+        <div id = "tutorial">Loading...</div>
         <a-scene embedded arjs id = "wholeScene">
             <a-marker preset="hiro" id = "aScene">
             </a-marker>
