updated NASA Official

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <footer>
       <p itemprop="title">
         NASA Official:
-        <a itemprop="email" href="mailto:brian.a.thomas@nasa.gov" target="_blank">Brian Thomas</a>
+        <a itemprop="email" href="mailto:benjamin.reist@nasa.gov" target="_blank">Benjamin Reist</a>
       </p>
       <p class="last">
         <a itemprop="url" href="http://open.nasa.gov/" target="_blank">
