Add Jason Duley to site footer

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <footer>
       <p itemprop="title">
-        NASA Official:
+        NASA Officials:
+        <a itemprop="email" href="mailto:jason.duley@nasa.gov" target="_blank">Jason Duley</a>,
         <a itemprop="email" href="mailto:benjamin.reist@nasa.gov" target="_blank">Benjamin Reist</a>
       </p>
       <p class="last">
