--- a/src/code-nasa-projects.html
+++ b/src/code-nasa-projects.html
@@ -161,7 +161,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </p>
       <p class="meta explain">
         <!-- <template is="dom-if" if="[[_hasQueryParams(queryParams.*)]]"> -->
+          This is a catalog of Open Source NASA code that has received <a href="/#/guide">SRA approval</a>
+       <!--  </template> -->
+      </p>
+      <p class="meta explain">
+        <!-- <template is="dom-if" if="[[_hasQueryParams(queryParams.*)]]"> -->
           A.I. generated tags are predicted using a natural language processing model applied to project descriptons. Tags come from  <a href="https://www.sti.nasa.gov/nasa-thesaurus/#.XKttRUN7lZI">8000 NASA concepts</a> tracked in 3.5 million published reports and papers by <a href="https://www.sti.nasa.gov/">NASA's Scientific and Technical Information Program</a>. Accuracy is not guaranteed. Click on a tag to see all projects with that tag.
+       <!--  </template> -->
+      </p>
+      <p class="meta explain">
+        <!-- <template is="dom-if" if="[[_hasQueryParams(queryParams.*)]]"> -->
+          The human-generated tag "usg-artificial-intelligence" is established by the <a href="https://code.gov/assets/data/ai_inventory-guidance.pdf">US Office of Management and Budget (OMB)</a> to help the public find A.I. code for reuse across all federal agencies.
        <!--  </template> -->
       </p>
 
