Commented out references to open.nasa.gov

--- a/src/code-nasa-related.html
+++ b/src/code-nasa-related.html
@@ -79,12 +79,12 @@
         </h1>
       </div>
 
-      <div class="section first" itemprop="Open Innovation">
+      <!-- <div class="section first" itemprop="Open Innovation">
         <h2><a itemprop="url" href="https://open.nasa.gov/">Open-data & Open-APIs & Open-Outreach</a></h2>
         <p>
           <a href="https://open.nasa.gov/">Open.nasa.gov</a> is a central place for websites run by NASA's Open Innovation program. From here you can go to open <a itemprop="url" href="https://data.nasa.gov/browse"> data</a>, open <a itemprop="url" href="https://api.nasa.gov">APIs</a>, information on open-data centric outreach programs like datanauts and <a itemprop="url" href="https://2019.spaceappschallenge.org">SpaceApps hackathon</a>, as well as <a itemprop="url" href="https://open.nasa.gov/open-gov/">information</a> on how we meet open-government related mandates. 
         </p>
-      </div>
+      </div> -->
 
       <div class="section" itemprop="NASA Software">
         <h2><a itemprop="url" href="https://software.nasa.gov/">Open-to-only-government-code</a></h2>
