Reworded blurb on software.nasa.gov for clarity

--- a/src/code-nasa-related.html
+++ b/src/code-nasa-related.html
@@ -89,7 +89,7 @@
       <div class="section" itemprop="NASA Software">
         <h2><a itemprop="url" href="https://software.nasa.gov/">Open-to-only-government-code</a></h2>
         <p itemprop="description">
-          Not all releasable code is open-source code. If you work for another government agency, there may be code you can access that is not open-source but is sharable with certain parties. If you don't find what you're looking for here, check out <a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office.
+          Not all releasable code is open-source code. NASA also has government source code that is only sharable with other US government agencies. If you don't find what you're looking for among the open-source on code.nasa.gov, check out <a itemprop="url" href="https://software.nasa.gov/">Software.NASA.Gov</a>, which is run by the Technology Transfer office and has government source code in addition to open source software.
         </p>
       </div>
       <div class="section first" itemprop="Dashlink">
