-add privacy policy

--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <a itemprop="email" href="mailto:benjamin.reist@nasa.gov" target="_blank">Benjamin Reist</a>
       </p>
       <p class="last">
+        <a itemprop="url" href="https://www.nasa.gov/about/highlights/HP_Privacy.html" target="_blank">
+          Privacy Policy
+        </a>
+        |
         <a itemprop="url" href="http://open.nasa.gov/" target="_blank">
           A NASA Open Government Initiative Website
         </a>
