--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <footer>
       <p itemprop="title">
         NASA Officials:
-        <a itemprop="email" href="mailto:jason.duley@nasa.gov" target="_blank">Jason Duley</a>,
+        <a itemprop="email" href="mailto:jason.duley@nasa.gov" target="_blank">Jason Duley</a>
       </p>
       <p class="last">
         <a itemprop="url" href="https://www.nasa.gov/about/highlights/HP_Privacy.html" target="_blank">
