changed index.html spelling

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </p>
       <p class="last">
         <a itemprop="url" href="https://www.nasa.gov/about/highlights/HP_Privacy.html" target="_blank">
-          Privacy Policy
+          Privacy Policies
         </a>
         |
         <a itemprop="url" href="http://open.nasa.gov/" target="_blank">
